Fix background alignment in slideshows

--- a/slideshows/kde/link/general.css
+++ b/slideshows/kde/link/general.css
@@ -7,6 +7,9 @@ html, body
 
 	font-family:sans-serif;
 	color:#000000;
+
+	background-image:url('background.jpg');
+	background-size: 100% auto;
 }
 
 /*
@@ -28,11 +31,6 @@ a
 	border: 1px solid black;
 
 	overflow:hidden;
-
-	background-image:url('background.jpg');
-	background-repeat:no-repeat;
-	background-position:top left;
-
 }
 
 #debug-controls
